Adding associated domains to plist

--- a/plugin.xml
+++ b/plugin.xml
@@ -37,6 +37,17 @@
         <param name="onload" value="true"/>
       </feature>
     </config-file>
+    
+    <config-file target="*-Debug.plist" parent="com.apple.developer.associated-domains">
+      <array>
+        <string>applinks:example.com</string>
+      </array>
+    </config-file>
+    <config-file target="*-Release.plist" parent="com.apple.developer.associated-domains">
+      <array>
+        <string>applinks:example.com</string>
+      </array>
+    </config-file>
 
 <!-- Objective-C Sources -->
 
